--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "ISC",  
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
